welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:17: error: not found: value suite
	return (suite(n-1))
                ^